@@ -1,9 +1,12 @@
-CHANGES.txt - 2009-06-15
+CHANGES.txt - 2009-06-16
 ------------------------
 
 CHANGES IN CUPS V1.4.0
 
 	- Localization updates (STR #3223)
+	- The scheduler did not minimize the number of printer state events that
+	  were generated by filter STATE: messages, which could lead to poor
+	  performance.
 	- The USB backend on Mac OS X did not cleanly cancel a job.
 	- The network backends now set the connecting-to-device printer-state-
 	  reasons value when looking up the address and copying the print data
